Home hdr wide gap alignment fixed

--- a/src/styles/components/_explainer.scss
+++ b/src/styles/components/_explainer.scss
@@ -15,7 +15,7 @@
 
       @include m(home) {
          @include mq(min-width, large) {
-            width: 95%;
+            width: 85%;
          }
       }
    }
